@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.439 2006/11/20 14:29:31 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.440 2006/12/04 15:00:19 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -333,6 +333,10 @@ PH/47 Put in an explicit test for a DNS lookup of an address record where the
 PH/48 When a host name was looked up from an IP address, and the subsequent
       forward lookup of the name timed out, the host name was left in
       $sender_host_name, contrary to the specification.
+
+PH/49 Although default lookup types such as lsearch* or cdb*@ have always been
+      restricted to single-key lookups, Exim was not diagnosing an error if
+      * or *@ was used with a query-style lookup.
 
 
 Exim version 4.63
